Created Simple GSI Mode System.